--- a/css/company.css
+++ b/css/company.css
@@ -59,17 +59,20 @@ body {
 /*--- ページ基本デザイン ---*/
 
 #main_company {
+	position: relative;
+}
+
+#main_company::before{
 	background-image: url(../img/markus-spiske-s7nlaF3kefg-unsplash.jpg);
 	background-size: cover;
 	background-position: center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	/* -webkit-filter: grayscale(100%);
-	-moz-filter: grayscale(100%);
-	-ms-filter: grayscale(100%);
-	-o-filter: grayscale(100%);
-	filter: grayscale(100%); */
-	position: relative;
+	content: "";
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: -1;
 }
 
 #navi {
