--- a/css/contact.css
+++ b/css/contact.css
@@ -174,22 +174,21 @@ body {
 }
 
 
-#main_company {
+#main_contact {
+	position: relative;
+}
+
+#main_contact::before{
 	background-image: url(../img/adria-berrocal-forcada-o7PxpvonuRQ-unsplash.jpg);
 	background-size: cover;
 	background-position: center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	/* background-color: #2a3950; */
-	padding-bottom: 100px;
-	/* -webkit-filter: grayscale(100%);
-	-moz-filter: grayscale(100%);
-	-ms-filter: grayscale(100%);
-	-o-filter: grayscale(100%);
-	filter: grayscale(100%); */
-	height: 100%;
+	content: "";
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
-	position: relative;
+	z-index: -1;
 }
 
 #navi {
@@ -313,7 +312,7 @@ body {
 }
 #scroll_service a span {
   position: absolute;
-  top: 25%;
+  top: 28%;
   left: 50%;
   width: 24px;
   height: 24px;
