--- a/css/service.css
+++ b/css/service.css
@@ -58,22 +58,21 @@ body {
 
 /*--- ページ基本デザイン ---*/
 
-#main_company {
+#main_service {
+	position: relative;
+}
+
+#main_service::before{
 	background-image: url(../img/office-865091_1920.jpg);
 	background-size: cover;
 	background-position: center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	/* background-color: #2a3950; */
-	padding-bottom: 100px;
-	/* -webkit-filter: grayscale(100%);
-	-moz-filter: grayscale(100%);
-	-ms-filter: grayscale(100%);
-	-o-filter: grayscale(100%);
-	filter: grayscale(100%); */
-	height: 100%;
+	content: "";
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
-	position: relative;
+	z-index: -1;
 }
 
 #navi {
@@ -207,7 +206,7 @@ body {
 }
 #scroll_service a span {
   position: absolute;
-  top: 22%;
+  top: 23%;
   left: 50%;
   width: 24px;
   height: 24px;
